--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 .page-content {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .app-container {
@@ -11,10 +12,22 @@
     margin-bottom: 0px;
 }
 
-
+/* .navbar-element {
+    margin-bottom: 0px;
+    width: 100%;
+} */
+.main-content-container {
+    margin-bottom: 0px;
+    width: 100%;
+}
 @media (min-width: 768px){
     .profile-container {
         width: 25%;
         margin-bottom: 0px;
+    }
+
+    .main-content-container {
+        margin-bottom: 0px;
+        width: 75%;
     }
 }
