--- a/styles/main.css
+++ b/styles/main.css
@@ -1,47 +1,82 @@
 body {
-    background-color: #0d1117;
-    color: #fff;
+  background-color: #0d1117;
+  color: #fff;
 }
 
 .page-content {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .app-container {
-    max-width: 1280px;
+  max-width: 1280px;
 }
 
 .profile-container {
-    width: 100%;
-    margin-bottom: 0px;
+  width: 100%;
+  margin-bottom: 0px;
+}
+
+.nav-item {
+  width: 25%;
 }
 
 .nav-link {
-    text-decoration: none;
-    color: rgba(255,255,255,.55);
+  text-align: center;
 }
 
+.show-name {
+  display: flex;
+  background-color: #0d1117;
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  transition: 0.2s;
+  width: 233px;
+  word-break: break-all;
+  z-index: 90;
+}
+
+.hide-name {
+  display: none;
+}
+
+a,
+.nav-link {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.55);
+}
+
+a:hover,
 .nav-link:hover {
-    color: #c9d1d9;
+  color: #c9d1d9;
 }
 
+a .active,
 .nav-link.active {
-    color: #fff;
+  color: #fff;
 }
 
 .main-content-container {
-    margin-bottom: 0px;
-    width: 100%;
+  margin-bottom: 0px;
+  width: 100%;
 }
-@media (min-width: 768px){
-    .profile-container {
-        width: 25%;
-        margin-bottom: 0px;
-    }
 
-    .main-content-container {
-        margin-bottom: 0px;
-        width: 75%;
-    }
+.navbar-element {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  z-index: 999;
+}
+
+@media (min-width: 768px) {
+  .profile-container {
+    width: 25%;
+    margin-bottom: 0px;
+  }
+
+  .main-content-container {
+    margin-bottom: 0px;
+    width: 75%;
+  }
 }
