--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,18 @@
 body {
-  background-color: #0d1117;
+  background-color: #0d1118;
   color: #fff;
+}
+
+.bkg-dark {
+    background-color: #0d1118 ;
+}
+
+.gh-border-dark {
+    border: solid 2px #30363d;
+}
+
+.gh-border-bottom-dark {
+    border-bottom: solid 2px #30363d;
 }
 
 .page-content {
@@ -17,7 +29,7 @@ body {
   margin-bottom: 0px;
 }
 
-.nav-item {
+.main-nav > .nav-item {
   width: 25%;
 }
 
@@ -26,18 +38,7 @@ body {
 }
 
 .show-name {
-height: 50px;
-width: 100%;
-text-align: center;
-  display: flex;
-  background-color: #0d1117;
-  pointer-events: none;
-  position: fixed;
-  top: 0;
-  transition: 0.5s;
-  width: 233px;
-  word-break: break-all;
-  z-index: 90;
+  display: none;
 }
 
 .hide-name {
@@ -58,6 +59,7 @@ a:hover,
 a .active,
 .nav-link.active {
   color: #fff;
+  border-bottom: #f78166 2px solid;
 }
 
 .main-content-container {
@@ -72,6 +74,25 @@ a .active,
   z-index: 999;
 }
 
+.footer-element {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 10px;
+}
+
+.github-svg{
+    display: none!important;
+    fill: #30363d;
+    padding: 8px 16px;
+    font-size: 12px;
+}
+@media (min-width: 1166px){
+    .github-svg{
+        display: block!important;
+    }
+}
+
 @media (min-width: 768px) {
   .profile-container {
     width: 25%;
@@ -82,4 +103,19 @@ a .active,
     margin-bottom: 0px;
     width: 75%;
   }
+
+  .show-name {
+    height: 50px;
+    width: 25%;
+    text-align: center;
+      display: flex;
+      align-items: center;
+      background-color: #0d1117;
+      pointer-events: none;
+      position: fixed;
+      top: 0;
+      transition: 0.5s;
+      word-break: break-all;
+      z-index: 90;
+    }
 }
