--- a/styles/main.css
+++ b/styles/main.css
@@ -81,12 +81,65 @@ a .active,
     margin: 10px;
 }
 
-.github-svg{
+.github-svg {
     display: none!important;
-    fill: #30363d;
+    fill: #fff;
     padding: 8px 16px;
-    font-size: 12px;
+
 }
+.github-svg:hover {
+    fill: #30363d;
+}
+
+.github-svg svg{
+    height: 30px;
+}
+
+.main-github-svg svg {
+    fill: #f0f6fc;
+    height: 60px;
+    padding: 10px;
+}
+
+.small-profile-stuff {
+    justify-content: center;
+}
+
+.small-username-text {
+    margin: 10px;
+}
+
+.small-profile-image-container {
+    width: 35px;
+    height: 35px;
+    margin: 10px;
+}
+
+.small-profile-image-container:after {
+    content: '';
+    display: block;
+    padding-bottom: 100%;
+}
+
+.small-profile-image {
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+}
+
+.profile-image {
+    height:0;
+    width:100%;
+    padding-bottom:100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+}
+
 @media (min-width: 1166px){
     .github-svg{
         display: block!important;
@@ -105,7 +158,7 @@ a .active,
   }
 
   .show-name {
-    height: 50px;
+    height: 60px;
     width: 25%;
     text-align: center;
       display: flex;
